--- a/questiongame/public/index.html
+++ b/questiongame/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script data-ad-client="ca-pub-1555847445754750" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--<link rel="icon" type="image/png" href="../src/Images/InbetweenGamesICON.png" />-->
